--- a/src/blog.jade
+++ b/src/blog.jade
@@ -19,17 +19,45 @@ html(lang="ru")
 
                     .blog.cf
                         h1 Блог
-                        .item-arcticle
-
-                            .image-left
-                                a(href="/about.html")
+                        .item-arcticle.cf
+                            a(href="#")
+                                .image-left
                                     img(src="../img/content/img_about.jpg")
 
-                            .text_overflow
-                                h3 Скоро выйдет новая коллекция одежды
-                                p.
-                                    Разнообразный и богатый опыт новая модель организационной деятельности в значительной степени обуславливает создание новых предложений. Задача организации, в особенности же консультация с широким активом играет важную роль в формировании системы обучения кадров, соответствует насущным потребностям. Таким образом укрепление и развитие структуры способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач. Товарищи! дальнейшее развитие различных форм деятельности играет важную роль в формировании дальнейших направлений развития. Идейные соображения высшего порядка, а также консультация с широким активом влечет за собой процесс внедрения и модернизации модели развития. С другой стороны рамки и место обучения кадров позволяет оценить значение соответствующий условий активизации.
+                                .text_overflow
+                                    h3 Скоро выйдет новая коллекция одежды
+                                    span.blog-date 07.01.2016
+                                    p.
+                                        Задача организации, в особенности же консультация с широким активом играет важную роль в формировании системы обучения кадров, соответствует насущным потребностям.
+                                        Таким образом укрепление и развитие структуры способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.
+                                    p.
+                                        Задача организации, в особенности же консультация с широким активом играет важную роль в формировании системы обучения кадров, соответствует насущным потребностям.
+                                        Таким образом укрепление и развитие структуры способствует подготовки и реализации позиций, занимаемых участниками в отношении поставленных задач.
 
+                        .item-arcticle.cf
+                            a(href="#")
+                                .image-left
+                                    img(src="../img/content/img_about.jpg")
+
+                                .text_overflow
+                                    h3 Скоро выйдет новая коллекция одежды
+                                    span.blog-date 07.01.2016
+                                    p.
+                                        Разнообразный и богатый опыт новая модель организационной деятельности в значительной степени обуславливает создание новых предложений.
+                                        Задача организации, в особенности же консультация с широким активом играет важную роль в формировании системы обучения кадров, соответствует насущным потребностям.
+
+
+                        .item-arcticle.cf
+                            a(href="#")
+                                .image-left
+                                    img(src="../img/content/img_about.jpg")
+
+                                .text_overflow
+
+                                    h3 Скоро выйдет новая коллекция одежды
+                                    span.blog-date 07.01.2016
+                                    p Разнообразный и богатый опыт новая модель организационной деятельности в значительной степени обуславливает создание новых предложений.
+                                    p Разнообразный и богатый опыт новая модель организационной деятельности в значительной степени обуславливает создание новых предложений.
 
                     .pagination
                         ul
