--- a/src/product.jade
+++ b/src/product.jade
@@ -1,18 +1,6 @@
 doctype html
 html(lang="ru")
-    head
-        link(href="/css/main.css" rel="stylesheet" type="text/css")
-        link(href="bower_components/normalize-css/normalize.css" rel="stylesheet" type="text/css")
-        link(href="/css/owl.carousel.css" rel="stylesheet" type="text/css")
-        link(href="/css/template.css" rel="stylesheet" type="text/css")
-        link(href="/css/blueimp-gallery.css" rel="stylesheet" type="text/css")
-        script(src="bower_components/jquery/dist/jquery.js")
-        script(src="/js/owl.carousel.js")
-        script(src="/js/untils.js")
-        script(src="/js/alexValidate.js")
-        script(src="/js/blueimp-gallery.min.js")
-
-
+    include ./head.jade
     body
         .page_wrapper
             include ./header.jade
