--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -747,7 +747,7 @@ footer
     width: 400px
     margin-right: 50px
     display: inline-block
-    vertical-align: middle
+    vertical-align: top
     ~ .text_overflow
       overflow: hidden
       display: inline-block
@@ -1248,6 +1248,7 @@ form.payment
     clear: both
     .image-left
       position: relative
+      vertical-align: middle
       &:after
         position: absolute
         content: ""
