--- a/src/cart.jade
+++ b/src/cart.jade
@@ -23,7 +23,7 @@ html(lang="ru")
                         form.cf
                             .products
                                 .product-item
-                                    .image
+                                    .image.img-holder
                                         a(href="/product.html")
                                             img(src="../img/content/small_img.jpg", alt="Кожанный кошелек")
                                     .item-name
@@ -44,7 +44,7 @@ html(lang="ru")
 
 
                                 .product-item
-                                    .image
+                                    .image.img-holder
                                         a(href="/product.html")
                                             img(src="../img/content/small_img.jpg", alt="Кожанный кошелек")
                                     .item-name
