--- a/src/header.jade
+++ b/src/header.jade
@@ -2,6 +2,47 @@
 header
 
             .wrap
+                .mobile-navbar
+                    div.navbar-toggle(type="button")
+                        span.icon-bar
+                        span.icon-bar
+                        span.icon-bar
+
+
+                    .mobile-navbar-holder
+                        .menu
+                            ul
+                                li.active
+                                    a(href="/") Главная
+                                li
+                                    a(href="/category.html") Купить онлайн
+                                li
+                                    a(href="/buy.html") Где купить
+                                li
+                                    a(href="/about.html") О нас
+                                li
+                                    a(href="/faq.html") FAQ
+                                li
+                                    a(href="/blog.html") Блог
+                                li
+                                    a(href="/contacts.html") Контакты
+                        ul.social
+                            li.vk
+                                a(href="#")
+                            li.facebook
+                                a(href="#")
+                            li.twitter
+                                a(href="#")
+                        ul.lang
+                            li.ua
+                                a(href="#") ua
+                            li.ru.active
+                                a(href="#") ru
+                            li.en
+                                a(href="#") en
+
+
+
                 .logo
                     a(href="/")
                         img(src="img/icons/logo.png")
