--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -411,7 +411,7 @@ footer
 
 
   li
-    height: 625px
+    //height: 625px
 
 
 .container
@@ -1442,7 +1442,7 @@ form.payment
   .wrap
     width: 720px
   .slider
-    height: 480px
+    height: auto
     margin-bottom: 50px
 
 
