--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -410,7 +410,8 @@ footer
   overflow: hidden
 
 
-
+  li
+    height: 625px
 
 
 .container
@@ -1352,6 +1353,8 @@ form.payment
         margin-right: 67px
   .slider
     height: 585px
+    li
+      height: 585px
 
 
   footer .wrap .adress
@@ -1443,7 +1446,10 @@ form.payment
   .slider
     height: auto
     margin-bottom: 50px
-
+    .owl-stage-outer
+      height: auto!important
+    li
+      height: auto
 
   .popular_product
     h3
