--- a/src/about.jade
+++ b/src/about.jade
@@ -1,13 +1,6 @@
 doctype html
 html(lang="ru")
-    head
-        link(href="/css/main.css" rel="stylesheet" type="text/css")
-        link(href="bower_components/normalize-css/normalize.css" rel="stylesheet" type="text/css")
-        link(href="/css/owl.carousel.css" rel="stylesheet" type="text/css")
-        link(href="/css/template.css" rel="stylesheet" type="text/css")
-        script(src="bower_components/jquery/dist/jquery.js")
-        script(src="/js/owl.carousel.js")
-        script(src="/js/untils.js")
+    include ./head.jade
 
 
     body
