--- a/src/head.jade
+++ b/src/head.jade
@@ -9,3 +9,5 @@ head
     script(src="/js/untils.js")
     script(src="/js/alexValidate.js")
     script(src="/js/blueimp-gallery.min.js")
+    meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no')
+    meta(name='format-detection', content='telephone=no')
