--- a/src/head.jade
+++ b/src/head.jade
@@ -11,3 +11,4 @@ head
     script(src="/js/blueimp-gallery.min.js")
     meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no')
     meta(name='format-detection', content='telephone=no')
+    meta(http-equiv='content-type', content='text/html; charset=utf-8')
