--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -1435,7 +1435,15 @@ form.payment
 
 
 
-
+.success-payment
+  .container
+    margin: 110px auto 290px
+    p
+      text-align: center
+      line-height: 1em
+      font-weight: normal
+      font-family: "SegoeUI", sans-serif
+      font-size: 20px
 
 
 
