--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -1898,7 +1898,9 @@ form.payment
       padding: 15px 15px 17px
       font-size: 14px
 
-
+  .success-payment
+    .container
+      margin: 70px auto 100px
 
 
 @media screen and (max-width: 320px)
