--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -1437,13 +1437,17 @@ form.payment
 
 .success-payment
   .container
-    margin: 110px auto 290px
+    margin: 100px auto 0
     p
       text-align: center
       line-height: 1em
       font-weight: normal
       font-family: "SegoeUI", sans-serif
       font-size: 20px
+
+.container
+  min-height: 33.5%
+  height: auto !important
 
 
 
@@ -1900,7 +1904,7 @@ form.payment
 
   .success-payment
     .container
-      margin: 70px auto 100px
+      margin: 30px auto
 
 
 @media screen and (max-width: 320px)
