--- a/src/contacts.jade
+++ b/src/contacts.jade
@@ -24,10 +24,14 @@ html(lang="ru")
                                 span.error Поле обязательное для заполнения
                             button(type="submit") Отправить
                         ul.contact
-                            li Skype: Symonenko.shop
-                            li Телефон: +38 (093) 526 35 69
-                            li Телефон: +38 (093) 526 35 69
-                            li Почта: Symonen.ko@gmail. com
+                            li Skype:
+                                a(href="skype:Symonenko.shop?chat" title="Symonenko.shop") Symonenko.shop
+                            li Телефон:
+                                a(href="tel:+380935263954") +38 (093) 526 39 54
+                            li Телефон:
+                                a(href="tel:+380935263954") +38 (093) 526 39 54
+                            li Почта:
+                                a(href="mailto:Symonen.ko@gmail.com") Symonen.ko@gmail.com
 
 
 
