--- a/src/footer.jade
+++ b/src/footer.jade
@@ -5,9 +5,9 @@ footer
                 h3 Позвонить нам
                 ul
                     li
-                        a(href="+380935263954") +38 (093) 52 63 954
+                        a(href="tel:+380935263954") +38 (093) 52 63 954
                     li
-                        a(href="+380935263954") +38 (093) 52 63 954
+                        a(href="tel:+380935263954") +38 (093) 52 63 954
 
 
             .social
