--- a/src/footer.jade
+++ b/src/footer.jade
@@ -31,8 +31,9 @@ footer
             div.subscription
                 h3 Подписаться на новости
                 form.subscription_mail
-                    div
+
                         input(type='email' placeholder='mail:', data-validate="email")
+                        button(type="submit")
 
 
 
@@ -51,3 +52,8 @@ footer
 
 
         p.copyright © 2016 Symonen.ko
+
+
+#cache
+    img(src="../img/icons/cart_hover.png")
+    img(src="../img/icons/master_card_hover.png")
