--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -107,6 +107,7 @@ header
             color: #000000
             &:hover
               color: #000000
+              text-decoration: none
 
         a
           line-height: 20px
@@ -119,7 +120,7 @@ header
           display: block
           &:hover
             color: #ffe400
-            text-decoration: none
+
 
   .cart
       display: inline-block
@@ -130,7 +131,7 @@ header
         display: block
         background: url("../img/icons/cart.png") no-repeat
         background-size: 100%
-
+        transition: all 0.35s
         width: 25px
         height: 28px
         color: #030303
@@ -142,6 +143,7 @@ header
           text-decoration: none
           background: url("../img/icons/cart_hover.png") no-repeat
           background-size: 100%
+          transition: all 0.35s
 
 
 
@@ -269,18 +271,32 @@ footer
       .error
         input
           border-color: #ee2115
-
+      .subscription_mail
+        position: relative
       input
         background: none
         border: 1px solid #fff
         width: 220px
         height: 35px
         box-sizing: border-box
-        padding: 0 10px
+        padding: 0 33px 0 10px
         color: #FFF
+        + button
+          display: none
 
         &::-webkit-input-placeholder, &:-moz-placeholder, &::-moz-placeholder, &:-ms-input-placeholder
               color: #fff
+      button
+          border: none
+          background: url("../img/icons/email.png") no-repeat
+          background-size: 100%
+          position: absolute
+          right: 8px
+          top: 8px
+          width: 25px
+          height: 19px
+          &:hover
+            background-position: bottom left
 
 
     .payment
@@ -414,6 +430,27 @@ footer
 
   li
     height: 625px
+  .owl-controls
+    position: relative
+    z-index: 10
+    bottom: 30px
+  .owl-dots
+    text-align: center
+    .owl-dot
+        display: inline-block
+        vertical-align: middle
+        margin: auto 5px
+        &.active,&:hover
+          span
+            background: #ffe400
+
+        span
+            width: 20px
+            height: 20px
+            border-radius: 20px
+            background: #a3a2a2
+            display: block
+
 
 
 .container
@@ -1415,8 +1452,11 @@ form.payment
       text-align: center
 
 
-    .image-left ~ .text_overflow
-      width: 425px
+    .image-left
+      width: 350px
+      margin-right: 30px
+      ~ .text_overflow
+        width: 335px
 
   .cart_page
     margin: 50px auto
@@ -1509,8 +1549,11 @@ form.payment
       .adress
         margin: auto 55px
 
-      > div ul li
-        font-size: 14px
+      > div
+        &:nth-child(3)
+          width: 220px
+        ul li
+          font-size: 14px
 
 
   .productfull
@@ -1524,12 +1567,7 @@ form.payment
 
 
 
-    .image-left
-      margin-right: 0
-      margin-bottom: 30px
-      width: auto
-      ~ .text_overflow
-        width: 100%
+
 
 
 
@@ -1660,6 +1698,14 @@ form.payment
         vertical-align: top
         margin: auto
         text-align: center
+        margin-bottom: 40px
+        .social
+          display: none
+        &.adress
+          ul
+            li
+              &:nth-child(n+2):nth-child(-n+10)
+                display: none
 
       .adress
         margin: auto
@@ -1748,6 +1794,14 @@ form.payment
       li
         font-size: 14px
         margin-bottom: 15px
+
+    .image-left
+        margin-right: 0
+        margin-bottom: 30px
+        width: auto
+        ~ .text_overflow
+          width: 100%
+
 
 
 
@@ -1884,7 +1938,15 @@ form.payment
   .list_products,.categories
     margin: auto
     .product,.category
-      margin: 0 auto 30px
+        margin: 0 auto 30px
+
+
+  .list_products
+    .product
+      a
+        .product_name
+          margin-bottom: 7px
+
 
   body
       min-width: 320px
@@ -2026,3 +2088,8 @@ body.client-moz
       background: #000000
       color: #fff
       text-decoration: none
+
+
+
+#cache
+  display: none
