--- a/src/footer.jade
+++ b/src/footer.jade
@@ -57,3 +57,4 @@ footer
 #cache
     img(src="../img/icons/cart_hover.png")
     img(src="../img/icons/master_card_hover.png")
+    img(src="../img/icons/email_hover.png")
