--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -283,6 +283,12 @@ footer
         color: #FFF
         + button
           display: none
+            opacity: 0
+        &:focus
+          + button
+            display: block
+              opacity: 1
+
 
         &::-webkit-input-placeholder, &:-moz-placeholder, &::-moz-placeholder, &:-ms-input-placeholder
               color: #fff
@@ -294,9 +300,12 @@ footer
           right: 8px
           top: 8px
           width: 25px
-          height: 19px
+          height: 20px
+          //transition: all 0.35s
           &:hover
-            background-position: bottom left
+            background: url("../img/icons/email_hover.png") no-repeat
+            background-size: 100%
+            //transition: all 0.35s
 
 
     .payment
