--- a/src/cart.jade
+++ b/src/cart.jade
@@ -20,7 +20,7 @@ html(lang="ru")
                                         a(href="/product.html")
                                             img(src="../img/content/small_img.jpg", alt="Кожанный кошелек")
                                     .item-name
-                                        a(href="/product.html") Кожанный кошелек
+                                        a(href="/product.html", title="Кожанный кошелек") Кожанный кошелек
                                         span.code Код товара: 36525
 
                                     .attr
@@ -41,7 +41,7 @@ html(lang="ru")
                                         a(href="/product.html")
                                             img(src="../img/content/small_img.jpg", alt="Кожанный кошелек")
                                     .item-name
-                                        a(href="/product.html") Кожанный кошелек
+                                        a(href="/product.html", title="Кожанный кошелек") Кожанный кошелек
                                         span.code Код товара: 36525
 
                                     .attr
