--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -449,17 +449,36 @@ footer
         display: inline-block
         vertical-align: middle
         margin: auto 5px
-        &.active,&:hover
+        &.active
           span
-            background: #ffe400
+            &:after
+
+              top: 2px
+              left: 2px
+              width: 12px
+              height: 12px
+              border-radius: 12px
 
         span
             width: 20px
             height: 20px
             border-radius: 20px
-            background: #a3a2a2
+            position: relative
             display: block
+            border: 2px solid #a3a2a2
+            padding: 2px
+            box-sizing: border-box
 
+            &:after
+              position: absolute
+              top: -2px
+              left: -2px
+              width: 20px
+              height: 20px
+              background: #a3a2a2
+              content: ''
+              display: block
+              border-radius: 20px
 
 
 .container
@@ -1199,11 +1218,20 @@ form.payment
           box-sizing: border-box
           border-right: 1px solid  #dbdbdb
           height: 100px
+          position: relative
           &:last-child
             border: 0
           &.image
               width: 190px
               padding: 0 15px
+              height: 100px
+              overflow: hidden
+              img
+                  height: 100px
+                  position: absolute
+                  left: 15px
+                  top: 0
+
           &.item-name
               padding: 25px 15px 0 15px
               width: 285px
@@ -1422,6 +1450,70 @@ form.payment
         &:last-child
           text-align: center
 
+
+
+
+
+
+body.client-ie,
+body.client-safari
+  .cart_page form .products .product-item > div.delete
+    a
+      position: relative
+      padding-top: 33px
+      display: block
+      &:after
+        position: absolute
+        top: 0
+        left: 50%
+        background: url("../img/icons/delete2.png") no-repeat top center
+        background-size: 100%
+        width: 19px
+        content: ""
+        height: 23px
+        margin-left: -10px
+
+      img
+        display: none
+
+      &:hover:after
+        background: url("../img/icons/delete.png") no-repeat top center
+        background-size: 100%
+
+  .pagination
+    li
+      &.prev a
+        transform: rotate(0deg)
+      &.next a
+        transform: rotate(180deg)
+      a
+        background: url("../img/icons/pagination2.png") no-repeat
+        background-position: 0 -18px
+        background-size: 100%
+        &:hover
+          background-position: left bottom
+    &.disabled
+      a
+        background-position: 0 0
+        &:hover
+          background-position: 0 0
+
+
+body.client-moz
+  @media screen and (max-width: 959px)
+    img
+      width: 100%
+
+    .cart_page
+      form
+        .products
+          .product-item
+            > div.attr
+              .color img
+                width: 20px
+
+
+
 @media screen and (max-width: 992px)
   .wrap
       width: 880px
@@ -1478,7 +1570,12 @@ form.payment
         .product-item
           > div
             &.image
-              padding: 0 10px
+              padding: 0
+              width: 160px
+              img
+                left: 0
+
+
             &.item-name
               padding: 25px 10px 0 10px
               width: 270px
@@ -1595,6 +1692,11 @@ form.payment
                 padding: 0
                 width: 100px
                 vertical-align: middle
+                img
+                  height: 60px
+                  top: 50%
+                  margin-top: -30px
+
               &.item-name
 
                 width: 200px
@@ -1741,8 +1843,14 @@ form.payment
             margin-bottom: 20px
             padding: 0
             height: auto
+
             &.image
               width: 160px
+              img
+                height: 100px
+                margin-top: -50px
+
+
 
             &.item-name,&.attr,&.price,&.delete
               width: 280px
@@ -1759,6 +1867,19 @@ form.payment
 
             &.price
               font-size: 20px
+            &.delete
+              a
+                background: #ffe400
+                padding: 10px 0
+                width: 280px
+                display: block
+                &:hover
+                  background: #e3cc0a
+                  span
+                    color: #000000
+                  img
+                    filter: brightness(0.1)
+
 
 
 
@@ -1827,6 +1948,18 @@ form.payment
       p
         font-size: 15px
 
+
+
+
+
+  body.client-ie,
+  body.client-safari
+    .cart_page form .products .product-item > div.delete
+      a
+
+        &:hover:after
+          background: url("../img/icons/delete2.png") no-repeat top center
+          background-size: 100%
 
 
 @media screen and (max-width: 480px)
@@ -2003,63 +2136,6 @@ form.payment
 
 
 
-
-body.client-ie,
-body.client-safari
-  .cart_page form .products .product-item > div.delete
-        a
-          position: relative
-          padding-top: 33px
-          display: block
-          &:after
-              position: absolute
-              top: 0
-              left: 50%
-              background: url("../img/icons/delete2.png") no-repeat top center
-              background-size: 100%
-              width: 19px
-              content: ""
-              height: 23px
-              margin-left: -10px
-
-          img
-            display: none
-
-          &:hover:after
-            background: url("../img/icons/delete.png") no-repeat top center
-            background-size: 100%
-
-  .pagination
-        li
-          &.prev a
-            transform: rotate(0deg)
-          &.next a
-            transform: rotate(180deg)
-          a
-            background: url("../img/icons/pagination2.png") no-repeat
-            background-position: 0 -18px
-            background-size: 100%
-            &:hover
-              background-position: left bottom
-        &.disabled
-          a
-            background-position: 0 0
-            &:hover
-              background-position: 0 0
-
-
-body.client-moz
-  @media screen and (max-width: 959px)
-    img
-      width: 100%
-
-    .cart_page
-      form
-        .products
-          .product-item
-            > div.attr
-              .color img
-                width: 20px
 
 
 
