fixed bug product

--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -1042,7 +1042,7 @@ form.payment
       .owl-item
         //width: 140px
         //height: 75px
-        margin-right: 18px
+        //margin-right: 18px
       .owl-controls
         .owl-nav
           .owl-prev,
