--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -973,6 +973,9 @@ form.payment
       &:nth-child(2n+1)
         margin-right: 20px
 
+    &.delivery_novaposhta
+
+
   input[type="text"],input[type="email"]
       border: 1px #adacac  solid
       width: 338px
@@ -985,14 +988,6 @@ form.payment
       font-family: "SegoeUILight", sans-serif
       &:focus
         border: 2px solid #000
-
-
-
-
-
-
-
-
 
 
 
@@ -1020,6 +1015,8 @@ form.payment
           + label
             background-position: top left
 
+    &.delivery
+      #novaposhta2:checked
 
 
 .productfull
