--- a/src/head.jade
+++ b/src/head.jade
@@ -1,6 +1,6 @@
 head
     link(href="/css/main.css" rel="stylesheet" type="text/css")
-    link(href="bower_components/normalize-css/normalize.css" rel="stylesheet" type="text/css")
+    link(href="/css/normalize.css" rel="stylesheet" type="text/css")
     link(href="/css/owl.carousel.css" rel="stylesheet" type="text/css")
     link(href="/css/template.css" rel="stylesheet" type="text/css")
     link(href="/css/blueimp-gallery.css" rel="stylesheet" type="text/css")
