--- a/src/index.jade
+++ b/src/index.jade
@@ -52,3 +52,10 @@ html(lang="ru")
 
 
             include ./footer.jade
+
+
+
+        section#error-wrapper
+            .error-message.success.open dsgfsdg
+            .error-message.error.open dsgfsdg
+            .error-message.warning.open dsgfsdg
