--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -203,6 +203,8 @@ footer
     > div
       display: inline-block
       vertical-align: top
+      width: 220px
+      overflow: hidden
       h3
         color: #ffe400
         font-size: 18px
@@ -266,7 +268,8 @@ footer
 
     .adress
         width: 235px
-        margin: auto 165px
+        //margin: auto 165px
+        margin:  auto 125px
 
 
         ul
@@ -295,11 +298,11 @@ footer
         color: #FFF
         + button
           display: none
-            opacity: 0
+          opacity: 0
         &:focus
           + button
             display: block
-              opacity: 1
+            opacity: 1
 
 
         &::-webkit-input-placeholder, &:-moz-placeholder, &::-moz-placeholder, &:-ms-input-placeholder
@@ -1540,7 +1543,7 @@ body.client-moz
 
 
   footer .wrap .adress
-    margin: auto 135px
+    margin: auto 95px
 
 
   .productfull
@@ -1665,7 +1668,7 @@ body.client-moz
   footer
     .wrap
       .adress
-        margin: auto 55px
+        margin: auto 18px
 
       > div
         &:nth-child(3)
@@ -1822,6 +1825,7 @@ body.client-moz
         margin: auto
         text-align: center
         margin-bottom: 40px
+        width: auto
         .social
           display: none
         &.adress
