--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -297,11 +297,11 @@ footer
         padding: 0 33px 0 10px
         color: #FFF
         + button
-          display: none
           opacity: 0
+
         &:focus
           + button
-            display: block
+            //display: block
             opacity: 1
 
 
